[tool.poetry]
name = "RedditFetch"
version = "0.1.0"
description = "A http web app that fetches data from the Reddit api from the r/memes subreddit and renders it on a webpage."
authors = ["vervoortkobe"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
